--- a/riff-laspapeleras/src/index.css
+++ b/riff-laspapeleras/src/index.css
@@ -1,5 +1,9 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+div.bin {
+  background: red;
+  
 }
+
+div.map {
+  background: blue;
+}
+
