--- a/riff-laspapeleras/src/stylesheets/base.css
+++ b/riff-laspapeleras/src/stylesheets/base.css
@@ -14,13 +14,46 @@
 }
 
 .map {
-  flex-grow: 2;
+  width: 60%;
   height: 100vh;
   background: #bbb;
 }
 
 .binList {
-  flex-grow: 1;
+  width: 40%;
   padding: 20px;
   background: #f5f5f5;
+}
+
+.bin {
+  display: flex;
+}
+
+.bin-image-wrapper {
+  flex: 1 0 auto;
+  display: flex;
+}
+
+.bin-image-wrapper img {
+  flex: 1 0 auto;
+}
+
+.bin-info {
+  flex: 1 0 auto;
+}
+
+.percent-full-wrapper {
+  position: relative;
+  width: 100%;
+  height: 30px;
+  background: #ddd;
+}
+
+.percent-full {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 10px;
+  height: 30px;
+  background: green;
 }
