--- a/riff-laspapeleras/src/stylesheets/base.css
+++ b/riff-laspapeleras/src/stylesheets/base.css
@@ -22,24 +22,33 @@
 .binList {
   width: 40%;
   padding: 20px;
-  background: #f5f5f5;
+  background: #ccc;
 }
 
 .bin {
   display: flex;
+  margin-bottom: 20px;
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
 }
 
 .bin-image-wrapper {
-  flex: 1 0 auto;
-  display: flex;
+  width: 50%;
 }
 
 .bin-image-wrapper img {
-  flex: 1 0 auto;
+  width: 100%;
 }
 
 .bin-info {
-  flex: 1 0 auto;
+  width:50%;
+  padding-left: 20px;
+}
+
+.bin-info h1 {
+  color: #666;
+  margin-bottom: 20px;
 }
 
 .percent-full-wrapper {
@@ -56,4 +65,8 @@
   min-width: 10px;
   height: 30px;
   background: green;
+}
+
+.bin-sliders {
+  width: 100%;
 }
