--- a/riff-laspapeleras/src/stylesheets/base.css
+++ b/riff-laspapeleras/src/stylesheets/base.css
@@ -254,3 +254,21 @@ input[type=range]:focus::-ms-fill-upper {
 .game-over h1 {
   color: red;
 }
+
+.modal-content {
+  display: block;
+  margin:auto;
+  max-width:700px;
+  font-family: "Open Sans";
+  padding: 20px;
+  font-size:1.3em;
+}
+
+.modal {
+  border:none;
+  padding-top:100px;
+}
+
+.ReactModal__Content .ReactModal__Content--after-open .modal {
+
+}
